# Trash-Wars

./: App.tsx.backup  INTEGRATION_STATUS.md  NEXT_STEPS.md  README.md  README_ZIP.md  TESTING_READY.md  UNFINISHED_PROJECTS_SUMMARY.md  WASM_IMPLEMENTATION_GUIDE.md  WASM_INTEGRATION_COMPLETE.md  WASM_INTEGRATION_PLAN.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
anchor-program/programs/trash-wars/: Cargo.toml
components/: GameCanvas.tsx  MainMenu.tsx
extracted_projects/: #L01f5d1#Ufe0f TRASH WARS - IMPLEMENTATION GUIDE.md  MainMenuUpdated.tsx  TRASH_WARS_COMPLETE_DEVELOPMENT_PLAN.md  solanaService.ts  useGameSession.ts
extracted_projects/unzip_nested/: #L01f5d1#Ufe0f TRASH WARS - IMPLEMENTATION COMPLETION SUMMARY.md  Anchor.toml  App.tsx  AppUpdated.tsx  DEPLOYMENT_GUIDE.md  MainMenu.tsx  MainMenuUpdated.tsx  TRASH_WARS_BLOCKCHAIN_QUICKSTART.md  WalletProvider.tsx  lib.rs
hooks/: useAudio.ts  useGameSession.ts  usePhysics.ts
services/: geminiService.ts  solanaService.ts
wasm-physics/: Cargo.toml
wasm-physics/pkg/: README.md  package.json  trash_wars_physics.d.ts  trash_wars_physics.js  trash_wars_physics_bg.wasm  trash_wars_physics_bg.wasm.d.ts
wasm-physics/src/: lib.rs
